--- a/app/src/main/res/layout/activity_list_museum.xml
+++ b/app/src/main/res/layout/activity_list_museum.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     tools:context="com.example.musedroid.musedroid.ListMuseumActivity">
 
     <android.support.v7.widget.Toolbar
@@ -22,13 +23,16 @@
         android:layout_marginTop="1dp" />
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/listView"
-        android:layout_marginLeft="0dp"
+        android:layout_width="382dp"
+        android:layout_height="447dp"
+        android:layout_marginLeft="-14dp"
+        android:layout_marginTop="-26dp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="2.0sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:layout_editor_absoluteX="0dp" />
 
 
 </android.support.constraint.ConstraintLayout>
